application/kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kustomize
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  labels:
    kubernetes.io/metadata.name: kustomize
