application/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        resources:
          requests:
            cpu: 10m
            memory: 10mb
          limits:
            cpu: 100m
            memory: 100mb
        volumeMounts:
        - name: setings
          mountPath: "/config"
          readOnly: true
        volumes:
        - name: settings
          configMap:
            name: dev-settings
